# xmscore

./: .appveyor.yml  .flake8  .gitattributes  .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  ____init_____8py_source.html  _doxygen_mainpage_8md_source.html  _dyn_bitset_8cpp.html  _dyn_bitset_8cpp.js  _dyn_bitset_8cpp_source.html  _dyn_bitset_8h.html  _dyn_bitset_8h.js  _dyn_bitset_8h_source.html  _observer_8cpp.html  _observer_8cpp_source.html  _observer_8h.html  _observer_8h_source.html  _observer_8t_8h.html  _observer_8t_8h_source.html  _progress_8cpp.html  _progress_8cpp.js  _progress_8cpp_source.html  _progress_8h.html  _progress_8h_source.html  _progress_8t_8h.html  _progress_8t_8h_source.html  _public_observer_8h.html  _public_observer_8h_source.html  _py_observer_8h.html  _py_observer_8h_source.html  _py_utils_8cpp_source.html  _py_utils_8h.html  _py_utils_8h.js  _py_utils_8h_source.html  _singleton_8cpp.html  (+377 more)
.claude/: settings.json
.claude/commands/: pre-pr.md  regen.md
.claude/hooks/: block-config-protection.sh  block-generated-files.sh  format-changed.sh
.github/workflows/: Coverage.yaml  Docs-CI.yaml  Linux-CI.yaml  Mac-CI.yaml  Windows-CI.yaml  XmsCore-CI.yaml  XmsCore-Documentation.yaml
.travis/: install.sh  listdir.sh  run.sh  test.sh
Doxygen/: CommonIdioms.md  Doxyfile  DoxygenMainpage.md  doxygen_html_style.css
_package/: pyproject.toml  setup.py
_package/tests/: __init__.py
_package/tests/unit_tests/: __init__.py  filesystem_pyt.py  locale_pyt.py  observer_pyt.py  progress_listener_pyt.py  time_conversion_pyt.py
_package/xms/core/: __init__.py
_package/xms/core/filesystem/: __init__.py  filesystem.py
_package/xms/core/locale/: __init__.py  _locale.py  locale.py
_package/xms/core/misc/: __init__.py  observer.py  progress_listener.py
_package/xms/core/time/: __init__.py  time_conversion.py
_package/xmscore/misc/: observer.py
dev/: setenv.bat  setenv.sh  xmsprofile_debug  xmsprofile_debug_py  xmsprofile_release  xmsprofile_release_py
html/: index.html
latex/: refman.tex
locale/en_US/LC_MESSAGES/: xmscore.mo  xmscore.po
locales/en_US/LC_MESSAGES/: xmscore.mo  xmscore.po
pydocs/: .buildinfo  genindex.html  getting_started.html  gettingstarted.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
pydocs/.doctrees/: environment.pickle  getting_started.doctree  gettingstarted.doctree  index.doctree  intro.doctree  modules.doctree
pydocs/.doctrees/classes/: observer.doctree
pydocs/.doctrees/modules/: observer.doctree
pydocs/.doctrees/modules/misc/: Observer.doctree
pydocs/_sources/: getting_started.rst.txt  gettingstarted.rst.txt  index.rst.txt  modules.rst.txt
pydocs/classes/: observer.html
pydocs/modules/: observer.html
pydocs/modules/misc/: Observer.html
pydocs/source/: conf.py  getting_started.rst  index.rst  intro.rst  modules.rst  xmscore_py.cp35-win_amd64.pyd
pydocs/source/classes/: observer.rst
pydocs/source/modules/: observer.rst
pydocs/source/modules/filesystem/: filesystem.rst
pydocs/source/modules/misc/: Observer.rst  ProgressListener.rst
pydocs/source/modules/time/: time_conversion.rst
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  (+54 more)
src/math/: math.cpp  math.h
src/misc/: Observer.t.h  Progress.cpp  Singleton.cpp  StringUtil.cpp  StringUtil.h  XmError.cpp  XmError.t.h  carray.h  color_defines.h
src/points/: functors.cpp  functors.h  pt.h
src/stl/: deque.h  list.h
test_package/: conanfile.py  example.cpp
xmscore/dataio/: daStreamIo.cpp  daStreamIo.h  daStreamIo.t.h
xmscore/locale/: locale.cpp  locale.h  locale.t.h
xmscore/math/: math.cpp  math.h  math.t.h
xmscore/misc/: DynBitset.cpp  DynBitset.h  DynBitset.t.h  HeaderCheck.cpp  Observer.cpp  Observer.h  Observer.t.h  Progress.cpp  Progress.h  Progress.t.h  Singleton.cpp  Singleton.h  StringUtil.cpp  StringUtil.h  StringUtil.t.h  XmConst.h  XmError.cpp  XmError.h  XmError.t.h  XmLog.cpp  XmLog.h  XmLog.t.h  base_macros.h  boost_defines.h  carray.h  color_defines.h  environment.h  xmstype.h
xmscore/points/: functors.cpp  functors.h  functors.t.h  pt.cpp  pt.h  pt.t.h  ptsfwd.h
xmscore/python/: cxxtest.cpp  xmscore_py.cpp
xmscore/python/locale/: locale_py.cpp  locale_py.h
xmscore/python/misc/: PublicObserver.h  PublicProgressListener.h  PyObserver.h  PyProgressListener.h  PyUtils.cpp  PyUtils.h  misc_py.cpp  misc_py.h  observer_py.cpp  observer_pyt.py  progress_listener_py.cpp
xmscore/python/misc/detail/: Listener.cpp  Listener.h  PublicProgressListener.cpp
xmscore/python/time/: TimeConversion_py.cpp  time_py.cpp  time_py.h
xmscore/stl/: deque.h  hash.h  list.h  map.h  set.h  utility.h  vector.cpp  vector.h
xmscore/testing/: TestTools.cpp  TestTools.h
xmscore/time/: TimeConversion.cpp  TimeConversion.h  TimeConversion.t.h
xmscore/xmlocale/: xmlocale.cpp  xmlocale.t.h
